--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@next-auth/mongodb-adapter": "^1.1.3",
     "@types/nodemailer": "^6.4.17",
+    "@types/uuid": "^10.0.0",
     "bcryptjs": "^3.0.2",
     "libphonenumber-js": "^1.12.9",
     "mongodb": "^5.9.2",
@@ -19,7 +20,8 @@
     "nodemailer": "^6.10.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "twilio": "^5.7.1"
+    "twilio": "^5.7.1",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
