--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/nodemailer": "^6.4.17",
     "@types/uuid": "^10.0.0",
     "bcryptjs": "^3.0.2",
+    "dotenv": "^16.5.0",
     "libphonenumber-js": "^1.12.9",
     "mongodb": "^5.9.2",
     "next": "15.3.3",
